# ecommerce-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  db.sqlite3  entrypoint.sh  pyproject.toml  requirements.txt  schema.yml
.github/workflows/: django.yml
api/: admin.py  hook.py  models.py  serializers.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_user_first_name_user_last_name.py  0003_categorymodel_productmodel.py  0004_alter_categorymodel_name.py
project/: settings.py  urls.py
